SoupSocket: if :use-thread-context, hold a ref on it

If :use-thread-context is set on a socket, then hold a ref on the
thread-default GMainContext for the life of the socket. In particular,
this fixes a race condition in the test-utils server code that
sometimes shows up in context-test.

https://bugzilla.gnome.org/show_bug.cgi?id=744862